don't use border-collapse for table as it prevents using border radius

--- a/global.css
+++ b/global.css
@@ -212,8 +212,9 @@ form {
 /* Table (not great in mobile) */
 
 table {
-  border-collapse: collapse;
   border: #333 solid 3px;
+  border-spacing:0;
+  border-radius:2px;
   font-size: 14px;
   margin-bottom: 1em;
 }
@@ -230,6 +231,9 @@ th {
   text-transform: uppercase;
 }
 
+tbody tr:last-of-type td{
+border:0;
+}
 /* Misc */
 
 .errorText {
